enable pre commit checks

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     container: ghcr.io/antonbabenko/pre-commit-terraform:v1.62.3
     steps:
+      - uses: actions/checkout@v2
       - run: |
-           pre-commit --version
+           pre-commit run -a
         name: pre-commit check 
