--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,33 +3,22 @@ on:
   push:
     branches:
       - master
-
-permissions:
-  contents: read # for checkout
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   release:
-    name: Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # to be able to publish a GitHub release
-      issues: write # to be able to comment on released issues
-      pull-requests: write # to be able to comment on released pull requests
-      id-token: write # to enable use of OIDC for npm provenance
+    if: "!startsWith(github.event.head_commit.message, 'chore')"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/*"
-      - name: Install dependencies
-        run: npm clean-install
-      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
-        run: npm audit signatures
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+    - uses: actions/checkout@v3
+    - name: release using semantic-release
+      run: |
+        sudo apt-get update
+        pip install --user bumpversion
+        npm install @semantic-release/changelog
+        npm install @semantic-release/exec
+        npm install @semantic-release/git
+        npm install @semantic-release/github
+        npx semantic-release
+
